<package>
  <name>hrpsys</name>
  <version>3.1.4</version>
  <description>
   <p>Basic RT components and utilities to control robots using OpenRTM.</p>
   <p>This package is a wrapper of its upstream repository. Its development is happening at <a href = "https://code.google.com/p/hrpsys-base/source/browse/#svn%2Ftrunk">code.google.com/p/hrpsys-base</a>.</p>
   <p>The upstream version number to date is 3.1.4. Please refer to this discussion (http://code.google.com/p/rtm-ros-robotics/issues/detail?id=159) for the reason of this version conversion.</p>
  </description>

  <license>EPL</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author>AIST</author>
  <author>Fumio Kanehiro</author>

  <url type="website">http://ros.org/wiki/hrpsys</url>
  <url type="repository">https://code.google.com/p/hrpsys-base</url>
  <url type="bugtracker">https://code.google.com/p/hrpsys-base/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>openhrp3</build_depend>

  <build_depend>doxygen</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libirrlicht-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sdl</build_depend>
  <build_depend>subversion</build_depend>

  <run_depend>openhrp3</run_depend>

  <run_depend>glut</run_depend>
  <run_depend>libirrlicht-dev</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>libxml2</run_depend>
  <run_depend>libxmu-dev</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sdl</run_depend>

  <!-- <test_depend>openhrp3</test_depend> -->

  <export>
    <python path="${prefix}/lib/python2.7/dist-packages"/>
  </export>
</package>
