<package>
  <name>hrpsys</name>
  <version>315.1.7</version>
  <description>
   <p>An <a href = "http://www.openrtm.org/pub/OpenRTM-aist/">OpenRTM-aist</a>-based robot controller. This package is the most tailored for humanoid (dual-arm and/or biped) robots for historical reason.</p>
   <p>hrpsys package does not only wraps but build and installs the code from its mainstream repository (<a href = "https://code.google.com/p/hrpsys-base/source/browse/#svn%2Ftrunk">code.google.com/p/hrpsys-base</a>).</p>
   <p>The package version number is synchronized to that of mainstream, based on <a href = "http://code.google.com/p/rtm-ros-robotics/issues/detail?id=165#c5">this decision</a>.
   </p>
  </description>

  <license>EPL</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac Isao Saito</maintainer>
  <author>AIST</author>
  <author>Fumio Kanehiro</author>

  <url type="website">http://ros.org/wiki/hrpsys</url>
  <url type="repository">https://code.google.com/p/rtm-ros-robotics</url>
  <url type="bugtracker">https://code.google.com/p/rtm-ros-robotics/issues/list</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>doxygen</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libirrlicht-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>openhrp3</build_depend>
  <build_depend>sdl</build_depend>
  <build_depend>subversion</build_depend>
  <build_depend>mk</build_depend>

  <run_depend>glut</run_depend>
  <run_depend>libirrlicht-dev</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>libxml2</run_depend>
  <run_depend>libxmu-dev</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>openhrp3</run_depend>
  <run_depend>sdl</run_depend>

  <!-- <test_depend>openhrp3</test_depend> -->

  <export>
    <python path="${prefix}/lib/python2.7/dist-packages"/>
  </export>
</package>
