<package>
  <name>hrpsys</name>
  <version>315.2.4</version>
  <description>
   <p>An <a href = "http://www.openrtm.org/pub/OpenRTM-aist/">OpenRTM-aist</a>-based robot controller. This package is the most tailored for humanoid (dual-arm and/or biped) robots for historical reason.</p>
   <p>hrpsys package does not only wraps but build and installs the code from its mainstream repository (<a href = "https://code.google.com/p/hrpsys-base/source/browse/#svn%2Ftrunk">code.google.com/p/hrpsys-base</a>).</p>
   <p>The package version number is synchronized to that of mainstream, based on <a href = "http://code.google.com/p/rtm-ros-robotics/issues/detail?id=165#c5">this decision</a>. Its semantics:<br />
    <ul>
     <li><b>MAJOR</b>: Synchronized with <a href = "http://wiki.ros.org/openhrp3">OpenHRP3</a></li>
     <li><b>MINOR</b>: Indicate IDL compatibility (packages with different version numbers in this section are NOT compatible)</li>
     <li><b>PATCH</b>: Packages with different version numbers in this section ARE compatible.</li>
    </ul>
   </p>
  </description>

  <license>EPL</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac Isao Saito</maintainer>
  <author>AIST</author>
  <author>Fumio Kanehiro</author>

  <url type="website">http://ros.org/wiki/hrpsys</url>
  <url type="repository">https://code.google.com/p/rtm-ros-robotics</url>
  <url type="bugtracker">https://code.google.com/p/rtm-ros-robotics/issues/list</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>doxygen</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libirrlicht-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>openhrp3</build_depend>
  <build_depend>python-tk</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>roslang</build_depend>
  <build_depend>sdl</build_depend>
  <build_depend>git</build_depend>

  <build_depend>rosbash</build_depend> <!-- temporarily until openrtm_aist_core provides rosbash -->

  <run_depend>glut</run_depend>
  <run_depend>libirrlicht-dev</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>libxml2</run_depend>
  <run_depend>libxmu-dev</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>openhrp3</run_depend>
  <run_depend>python-tk</run_depend>
  <run_depend>sdl</run_depend>

  <run_depend>rosbash</run_depend> <!-- temporarily until openrtm_aist_core provides rosbash -->

  <!-- <test_depend>openhrp3</test_depend> -->

  <export>
    <python path="${prefix}/lib/python2.7/dist-packages"/>
  </export>
</package>
